--- a/Chatbot.css
+++ b/Chatbot.css
@@ -1,7 +1,8 @@
 html { 
-  background: url(Unbenannt.png) no-repeat center center fixed; 
+  background: url(https://user-images.githubusercontent.com/81644815/120698243-12489680-c4af-11eb-8633-14d3f9031647.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  
 }
